# python-boilerplate

./: .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yml  ruff.yml
cicd/cdk/: cdk.json  package-lock.json  package.json
cicd/cdk/lib/: myproject-stack.ts
cicd/cdk/test/: cdk.test.ts
src/: main.py
tests/: test_main.py
