[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.13",
    "pre-commit>=4.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib", "--cov=src"]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_empty = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C90", "I", "N", "D", "UP", "DTZ", "SIM", "PTH", "PL", "FAST", "A", "LOG", "G", "T20", "PT", "RUF"]
ignore = ["D100", "D104", "D107", "D203", "D213", "D400", "D401", "D403", "D415", "B008", "N802", "PLC2401", "RUF001", "RUF002", "RUF003", "PLR2004"]

[tool.ruff.lint.pylint]
max-statements = 75

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
